Trip Group chat changes